# layout-review

./: .gitignore  README.md  llm_config.example.json  pyproject.toml  run_desktop.py  run_pet.py  run_web.py
.agents/skills/layout-review/: SKILL.md
.agents/skills/layout-review/agents/: openai.yaml
.agents/skills/layout-review/references/: rubric.md
docs/: agent_development_steps.md
rule_profiles/: 1.json  2025.json  README.md  school_profile_ec1c45f9.json  school_profile_template.json
src/layout_review_agent/: __init__.py  cli.py  desktop.py  document_scope.py  docx_format.py  llm.py  models.py  pet.py  rules.py  sample.py  spec_normalizer.py  web.py
src/layout_review_agent/agents/: __init__.py  auditor.py  base.py  coordinator.py  fixer.py  iteration.py  parser.py  quality.py  reporter.py
src/layout_review_agent/assets/: THIRD_PARTY_NOTICES.md
src/layout_review_agent/rules/: default_undergraduate.json
tests/: test_end_to_end.py
